backport: re PR c++/44059 (Static initializers executed more than once when using unique global symbols)

Backport from mainline
	2010-05-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/44059
	* config/elfos.h (ASM_DECLARE_OBJECT_NAME): Use qnu_unique_object
	even for DECL_ONE_ONLY DECL_ARTIFICIAL !TREE_READONLY decls.
	* config/alpha/elf.h (ASM_DECLARE_OBJECT_NAME): Likewise.
	* dwarf2asm.c (dw2_output_indirect_constant_1): Set TREE_READONLY
	on DW.ref.* decls.

From-SVN: r161607